--- a/package.json
+++ b/package.json
@@ -75,5 +75,9 @@
     "tsc-alias": "^1.7.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
+  },
+  "engines": {
+    "node": "14.18.x",
+    "npm": "6.14.x"
   }
 }
