--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "typescript": "^4.7.4"
   },
   "engines": {
-    "node": "14.14.0-alpine3.12"
+    "node": "14.14.0-alpine3.12",
+    "npm": "6.14.x"
   }
 }
