--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node dist/server.js",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "swc src -d dist --source-maps --copy-files",
     "build:tsc": "tsc && tsc-alias",
@@ -77,7 +77,7 @@
     "typescript": "^4.7.4"
   },
   "engines": {
-    "node": "14.14.x",
-    "npm": "6.11.x"
+    "node": "14.18.2",
+    "npm": "6.14.15"
   }
 }
