--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     restart: 'unless-stopped'
     networks:
       - backend
+    depends_on:
+      - server
   server:
     build:
       context: ./
